--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Home</title>
+    <title>Socio-Path</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
