--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <footer class="footer">
-            <p>&copy <script>document.write(new Date().getFullYear());</script>. Made with &hearts; by <b>Aman Bhandekar</b> <br>Web Developer Intern @ TSF </p>
+            <p>&copy <script>document.write(new Date().getFullYear());</script>. Made with &hearts; by <b>Aman Bhandekar</b> <br>Web Developer Intern @ LGM </p>
           </footer>
     </div>
 </body>
